3rd tidy up (not finished)

--- a/notebooks/d_geosciences/Applied Geophysics/1D_Resistivity_Forward_Modelling.ipynb
+++ b/notebooks/d_geosciences/Applied Geophysics/1D_Resistivity_Forward_Modelling.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "source": [
     "## Model generation\n",
-    "run all the cells below to process the input parameters and generate the final resistivity result. A complete curve matching method derived from the Bessel functions is used. This expression is suitable for solving any number of layers. Note that there is a large number of theoretical models that will fit the field data. Theoretical model obtained from reference 1."
+    "Run all the cells below to process the input parameters and generate the final resistivity result. A complete curve matching method derived from the Bessel functions is used. This expression is suitable for solving any number of layers. Note that there is a large number of theoretical models that will fit the field data. Theoretical model obtained from reference 1."
    ]
   },
   {
