--- a/notebooks/d_geosciences/Applied Geophysics/Gravity correction.ipynb
+++ b/notebooks/d_geosciences/Applied Geophysics/Gravity correction.ipynb
@@ -32,11 +32,11 @@
    "id": "f44aee82",
    "metadata": {},
    "source": [
-    "According to Newton's law, gravtitational acceleration is equal to $g = \\frac{GM}{R^2}$ in $m s^{-2}$, where G is the universal gravitational constant at 6.67508e-11 $m^3 kg^{-1}  s^{-2} $, M is the mass of the planetary body in kg and R is the radius of the planetary body in m.\n",
+    "According to Newton's law, gravtitational acceleration is equal to $g = \\frac{GM}{R^2}$ in $m s^{-2}$, where $G$ is the universal gravitational constant at $6.67508 \\times 10^{-11}$ $m^3 kg^{-1} s^{-2} $, $M$ is the mass of the planetary body in $kg$ and $R$ is the radius of the planetary body in $m$.\n",
     "\n",
     "A mountain with lower density than the crust for example produces a gravity low.\n",
     "\n",
-    "In the example below, the crust and two mountains have densities of 3500 $\\frac{g}{cm^3}$, 2700  $\\frac{g}{cm^3}$ and 3000  $\\frac{g}{cm^3}$ respectively."
+    "In the example below, the crust and two mountains have densities of $3500$ $\\frac{g}{cm^3}$, $2700$ $\\frac{g}{cm^3}$ and $3000$ $\\frac{g}{cm^3}$ respectively."
    ]
   },
   {
@@ -99,7 +99,7 @@
     "\n",
     "$$g_z = -G \\sum_i \\frac{m_i}{r_i^2} \\hat{r_z}$$\n",
     "\n",
-    "where $m_i$ is the mass contained in a small volume and $r_z$ is the vertical unit vector between (x,y,z) and point P is the observation point."
+    "where $m_i$ is the mass contained in a small volume and $r_z$ is the vertical unit vector between ($x$,$y$,$z$) and point $P$ is the observation point."
    ]
   },
   {
@@ -154,7 +154,7 @@
    "metadata": {},
    "source": [
     "## Terrain correction\n",
-    "A terrain correction corrects for the local topography. This, since the crust is 3km above sea level, we must extract all excess topography above 3km. Below, the parts of the mountain that are above 3km altitude are plotted."
+    "A terrain correction corrects for the local topography. This, since the crust is $3\\,km$ above sea level, we must extract all excess topography above $3\\,km$. Below, the parts of the mountain that are above $3\\,km$ altitude are plotted."
    ]
   },
   {
