--- a/notebooks/d_geosciences/Applied Geophysics/Magnetic surveys.ipynb
+++ b/notebooks/d_geosciences/Applied Geophysics/Magnetic surveys.ipynb
@@ -20,7 +20,7 @@
    "id": "07499440",
    "metadata": {},
    "source": [
-    "We are going to examine the magnetic anomaly, $\\Delta B_z$, caused by a sphere and a horizontal cyclinder at 10m depth. For that, Poissons relation will be used. For this exercise, it is assumed that the magnetic field of the Earth, H, as well as the magnetic fields from the objects, B, are parallel. This is being done as follows:"
+    "We are going to examine the magnetic anomaly, $\\Delta B_z$, caused by a sphere and a horizontal cyclinder at $10\\,m$ depth. For that, Poissons relation will be used. For this exercise, it is assumed that the magnetic field of the Earth, $H$, as well as the magnetic fields from the objects, $B$, are parallel. This is being done as follows:"
    ]
   },
   {
