--- a/notebooks/d_geosciences/Climate/Climate_Model.ipynb
+++ b/notebooks/d_geosciences/Climate/Climate_Model.ipynb
@@ -15,11 +15,11 @@
     "```{index} Energy balance model\n",
     "```\n",
     "\n",
-    "The **energy flux density at the surface of the Earth** can be calculated from the inverse square law, given the power of the Sun $E_s=3.86\\times 10^{26}$ W and the distance between the Sun and the Earth $R=1.5\\times 10^{11}$ m: \n",
+    "The **energy flux density at the surface of the Earth** can be calculated from the inverse square law, given the power of the Sun $E_s=3.86\\times 10^{26}$ $W$ and the distance between the Sun and the Earth $R=1.5\\times 10^{11}$ $m$: \n",
     "\n",
     "$$S_o=\\frac{E_S}{4\\pi R^{2}}.$$\n",
     "\n",
-    "This is the **solar constant** $S_o$, which is roughly 1365 Wm$^{-2}$.\n",
+    "This is the **solar constant** $S_o$, which is roughly $1365$ $Wm^{-2}$.\n",
     "\n",
     "Energy balance model is crucial in building a climate model, since atmospheric dynamics is driven by the input of energy into the climate system. \n",
     "\n",
@@ -30,7 +30,7 @@
     "4. Equal solar irradiation on the surface of the Earth\n",
     "```\n",
     "\n",
-    "Recall that albedo ($\\alpha$) is the **reflectance of an object over all wavelengths**, which measures how well a surface reflects EM radiation. We already know the energy flux density at the surface of the Earth = the solar constant $S_o$. Thus, the energy flux density (Wm$^{-2}$) into the Earth is:\n",
+    "Recall that albedo ($\\alpha$) is the **reflectance of an object over all wavelengths**, which measures how well a surface reflects EM radiation. We already know the energy flux density at the surface of the Earth = the solar constant $S_o$. Thus, the energy flux density ($Wm^{-2}$) into the Earth is:\n",
     "\n",
     "$$M_{in}=S_o(1-\\alpha).$$ \n",
     "\n",
@@ -44,7 +44,7 @@
     "\n",
     "$$M_{out}=\\sigma T_K^{4},$$\n",
     "\n",
-    "where $\\sigma$ is Stefan-Boltzmann constant and $\\sigma = 5.67$x$10^{-8}$ Wm$^{-2}K^{-4}$, and $T_K$ is the **absolute temperature**. \n",
+    "where $\\sigma$ is Stefan-Boltzmann constant and $\\sigma = 5.67 \\times 10^{-8}$ $Wm^{-2}K^{-4}$, and $T_K$ is the **absolute temperature**. \n",
     "\n",
     "In terms of total energy flux:\n",
     "\n",
@@ -118,7 +118,7 @@
     "\n",
     "#### Assumption 2 \n",
     "\n",
-    "Albedo = 0.3 is pretty accurate. As you'll see below, after accounting for the Earth being an imperfect blackbody, the calculated surface temperature is very sensible.\n",
+    "Albedo = $0.3$ is pretty accurate. As you'll see below, after accounting for the Earth being an imperfect blackbody, the calculated surface temperature is very sensible.\n",
     "\n",
     "#### Assumption 3\n",
     "\n",
@@ -147,7 +147,7 @@
     "\n",
     "$$T_K=(\\frac{S_o(1-\\alpha)}{4\\varepsilon\\sigma})^{\\frac{1}{4}}.$$\n",
     "\n",
-    "It is found that the emissivity of the Earth is 0.62, and substituting this into the equation gives 14˚C, proving that albedo = 0.3 is a valid assumption."
+    "It is found that the emissivity of the Earth is $0.62$, and substituting this into the equation gives $14˚C$, proving that albedo = $0.3$ is a valid assumption."
    ]
   },
   {
