--- a/notebooks/d_geosciences/Continental Tectonics/Lithospheric_Strength.ipynb
+++ b/notebooks/d_geosciences/Continental Tectonics/Lithospheric_Strength.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "$${\\Delta}{\\sigma}_{xx}=\\frac{2f_{s}({\\rho}gy-p_{w})}{(1+f_{s}^{2})^{\\frac{1}{2}}-f_{s}}$$\n",
     "\n",
-    "where ${\\sigma}_{xx}$ is the deviatoric stress (i.e. non-hydrostatic stress; related to shape change), $f_{s}$ is the static component of friction, ${\\rho}gy$ is the lithostatic stress (${\\rho}$ = 3.3 g/cm3, $y$ = depth), and $p_{w}$ is the pore pressure. To find the failure stress of the brittle part of the lithosphere (e.g. the crust) we assume that the pore pressure is hydrostatic, so $p_{w}={\\rho}gy$ and $f_{s}$ = 0.6."
+    "where ${\\sigma}_{xx}$ is the deviatoric stress (i.e. non-hydrostatic stress; related to shape change), $f_{s}$ is the static component of friction, ${\\rho}gy$ is the lithostatic stress (${\\rho} = 3.3\\,g\\,cm^{-3}$, $y$ = depth), and $p_{w}$ is the pore pressure. To find the failure stress of the brittle part of the lithosphere (e.g. the crust) we assume that the pore pressure is hydrostatic, so $p_{w}={\\rho}gy$ and $f_{s} = 0.6$."
    ]
   },
   {
@@ -167,7 +167,7 @@
     "\n",
     "$$\\dot{\\epsilon}=A{\\sigma}^{n}\\:{\\exp}(\\frac{-E_{a}}{RT})$$\n",
     "\n",
-    "For olivine (i.e. mantle rocks) $A$ = 4.2 × 10^5 MPa−3 s−1, $E_{a}$ is the activation energy = 523 kJ/mol, and $n$ = 3. $R$ is the universal gas constant (8.314510 J mole−1 K−1).\n"
+    "For olivine (i.e. mantle rocks) $A = 4.2 \\times 10^5\\,{MPa}^{−3} s^{−1}$, $E_{a}$ is the activation energy = $523\\,kJ\\,mol^{-1}$, and $n = 3$. $R$ is the universal gas constant ($8.314510\\,J\\,mol^{−1} K^{−1}$).\n"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "source": [
     "### Practice 2\n",
-    "How far into the lithosphere does the Anderson theory extend? Taking strain rates of 10^−12 /s and 10^−14 /s calculate stress as a function of depth for a geothermal gradient of 25 K/km. At what depth and temperature does the strength of the lithosphere begin to depend on creep stresses? By integrating under strength curves we can estimate total tensional or compressional forces that oceanic lithosphere can support. Can ridge push forces be translated through oceanic lithosphere? Label the the brittle—ductile transition and plastic flow regimes on your strength curves. Where is the Moho? How might the strength profiles of continental lithosphere differ from those in the oceans (hint: consider the distribution of radiogenic elements)?"
+    "How far into the lithosphere does the Anderson theory extend? Taking strain rates of $10^{−12} \\,s^{-1}$ and $10^{−14} \\,s^{-1}$ calculate stress as a function of depth for a geothermal gradient of $25\\,K\\,km^{-1}$. At what depth and temperature does the strength of the lithosphere begin to depend on creep stresses? By integrating under strength curves we can estimate total tensional or compressional forces that oceanic lithosphere can support. Can ridge push forces be translated through oceanic lithosphere? Label the the brittle—ductile transition and plastic flow regimes on your strength curves. Where is the Moho? How might the strength profiles of continental lithosphere differ from those in the oceans (hint: consider the distribution of radiogenic elements)?"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Brittle–ductile transition is at crossover between brittle yield envelope (solid lines) and creep envelope (dashed lines). Note that the Moho is only at 7.1 km depth in this example (in the brittle failure regime). Maximum strength is at 30 km. The total compressional force that can be transmitted by oceanic lithosphere is the area under the curve and is approximately 2.2 x 10^13 N/m. Total tensional force that can be transmitted is about 8 x 10^12 N/m. In Practice 1 Ridge Push and Slab Pull, we estimated a ridge push force of 2.3 x 10^12 N/m and subduction pull as 2.5 x 10^13 N/m. So ridge push forces can be translated through old oceanic lithosphere."
+    "Brittle–ductile transition is at crossover between brittle yield envelope (solid lines) and creep envelope (dashed lines). Note that the Moho is only at $7.1\\,km$ depth in this example (in the brittle failure regime). Maximum strength is at $30\\,km$. The total compressional force that can be transmitted by oceanic lithosphere is the area under the curve and is approximately $2.2 \\times 10^{13}\\,N\\,m^{-1}$. Total tensional force that can be transmitted is about $8 \\times 10^{12}\\,N\\,m^{-1}$. In Practice 1 Ridge Push and Slab Pull, we estimated a ridge push force of $2.3 \\times 10^{12}\\,N\\,m^{-1}$ and subduction pull as $2.5 \\times 10^{13}\\,N\\,m^{-1}$. So ridge push forces can be translated through old oceanic lithosphere."
    ]
   },
   {
