--- a/notebooks/d_geosciences/Electromagnetism/2_maxwell_eqs.ipynb
+++ b/notebooks/d_geosciences/Electromagnetism/2_maxwell_eqs.ipynb
@@ -28,11 +28,11 @@
     "\n",
     "$$\\Phi_\\mathbf{E} = \\iint_{\\mathbf{S}}^{} \\mathbf{E} \\cdot d\\mathbf{S}$$\n",
     "\n",
-    "where for a closed surface, $d\\mathbf{S}$ points outwards by convention. To better understand the electric flux from a point charge, we will introduce the concept of *Solid Angles*. The solid angle is a generalisation of the ordinary angle between two lines. Consider a surface element, i.e., a small vector area  $d\\mathbf{S}$ which is distance r from point P. The surface element is defined to subtend a solid angle $d\\Omega$ as follows:\n",
+    "where for a closed surface, $d\\mathbf{S}$ points outwards by convention. To better understand the electric flux from a point charge, we will introduce the concept of *Solid Angles*. The solid angle is a generalisation of the ordinary angle between two lines. Consider a surface element, i.e., a small vector area  $d\\mathbf{S}$ which is distance $r$ from point $P$. The surface element is defined to subtend a solid angle $d\\Omega$ as follows:\n",
     "\n",
     "$$d\\Omega = \\frac{d\\mathbf{S} \\cdot \\mathbf{\\hat{r}}} {r^2}$$\n",
     "\n",
-    "where $\\mathbf{\\hat{r}}$ is the unit vector along the direction from P to the surface element. It should be noted that just as there are 2π radians in a circle, there are 4π steradians covering the surface of a sphere. \n",
+    "where $\\mathbf{\\hat{r}}$ is the unit vector along the direction from $P$ to the surface element. It should be noted that just as there are $2\\pi$ radians in a circle, there are $4\\pi$ steradians covering the surface of a sphere. \n",
     "\n",
     "Consider a point charge $Q$. The electric flux through a spherical surface $S_1$, radius $r_1$, is \n",
     "\n",
@@ -70,17 +70,17 @@
     "\n",
     "This is the integral form of Gauss's law! By considering a region of space with uniform charge density instead of point charges we can write Gauss's law in a different form. Consider a volume, $V$, with total charge, $Q$, and charge density, $\\rho$. The total charge can then be written in terms of the charge density:\n",
     "\n",
-    "$$Q = \\iiint_V \\rho dV$$\n",
+    "$$Q = \\iiint_V \\rho \\,dV$$\n",
     "\n",
     "Substituting this to Gauss's law:\n",
     "\n",
-    "$$\\oint_S \\mathbf{E} \\cdot d\\mathbf{S} = \\frac {1}{\\epsilon_0} \\iiint_V \\rho dV$$\n",
+    "$$\\oint_S \\mathbf{E} \\cdot d\\mathbf{S} = \\frac {1}{\\epsilon_0} \\iiint_V \\rho \\,dV$$\n",
     "\n",
     "where $V$ is the volume enclosed by the closed surface $S$.\n",
     "\n",
     "Applying the Divergence theorem we get\n",
     "\n",
-    "$$\\iiint_V \\nabla \\cdot \\mathbf{E} \\,dV = \\frac {1}{\\epsilon_0} \\iiint_V \\rho dV$$\n",
+    "$$\\iiint_V \\nabla \\cdot \\mathbf{E} \\,dV = \\frac {1}{\\epsilon_0} \\iiint_V \\rho \\,dV$$\n",
     "\n",
     "By applying this to an infinitesimal volume, we can remove the integrals such that\n",
     "\n",
@@ -146,9 +146,9 @@
     "\n",
     "$$d\\mathbf{B} = \\frac{\\mu_0 I} {4\\pi} \\frac{d\\boldsymbol{l} \\times \\mathbf{\\hat{r}}} {r^2}$$\n",
     "\n",
-    "where $d\\boldsymbol{l}$ is the line element, d$\\mathbf{B}$ is the magnetic field by the current element $Id\\boldsymbol{l}$ and $\\mathbf{\\hat{r}}$ is the unit vector from the line element to the location where we want the $\\mathbf{B}$ field. Thus the total field at this point is given by\n",
+    "where $d\\boldsymbol{l}$ is the line element, $d\\mathbf{B}$ is the magnetic field by the current element $Id\\boldsymbol{l}$ and $\\mathbf{\\hat{r}}$ is the unit vector from the line element to the location where we want the $\\mathbf{B}$ field. Thus the total field at this point is given by\n",
     "\n",
-    "$$\\mathbf{B} = \\frac{\\mu_0} {4\\pi} \\int \\frac{Id\\boldsymbol{l} \\times \\mathbf{\\hat{r}}} {r^2}$$\n",
+    "$$\\mathbf{B} = \\frac{\\mu_0} {4\\pi} \\int \\frac{I\\,d\\boldsymbol{l} \\times \\mathbf{\\hat{r}}} {r^2}$$\n",
     "\n",
     "Ampere's law is just another formulation of the Biot-Savart law. Using Biot-Savart, we can write\n",
     "\n",
