--- a/notebooks/d_geosciences/Electromagnetism/3_four_field.ipynb
+++ b/notebooks/d_geosciences/Electromagnetism/3_four_field.ipynb
@@ -36,15 +36,15 @@
     "\n",
     "where $\\chi_e$ is the *electric susceptibility* of the material. Now consider a small volume element inside the dielectric. Since the dielectric is neutral in charge we can write $Q_{inside} + Q_{surf} = 0$. This can be written as\n",
     "\n",
-    "$$\\int \\rho_p dV + \\oint \\mathbf{P} \\cdot d\\mathbf{S} = 0$$\n",
+    "$$\\int \\rho_p \\,dV + \\oint \\mathbf{P} \\cdot d\\mathbf{S} = 0$$\n",
     "\n",
     "where $\\rho_p$ is the polarisation charge density. Using Stoke's theorem we can write\n",
     "\n",
-    "$$\\int \\rho_p dV + \\int \\nabla \\cdot \\mathbf{P} dV = 0$$\n",
+    "$$\\int \\rho_p \\,dV + \\int \\nabla \\cdot \\mathbf{P} \\,dV = 0$$\n",
     "\n",
     "$$\\rho_p = -\\nabla \\cdot \\mathbf{P}$$\n",
     "\n",
-    "If P is time-varying then\n",
+    "If $\\mathbf{P}$ is time-varying then\n",
     "\n",
     "$$\\frac{∂\\mathbf{P}}{∂t} = N\\frac{∂\\mathbf{p}}{∂t} = Nq\\mathbf{v}$$\n",
     "\n",
@@ -78,7 +78,7 @@
     "```{index} H field\n",
     "```\n",
     "\n",
-    "To introduce the H field we must first talk about atomic magnetic dipole moments. These are in reality a quantum effect, but it can be helpful to visualise the atom as a tiny current loop. The atomic magnetic dipole moment is defined as\n",
+    "To introduce the $\\mathbf{H}$ field we must first talk about atomic magnetic dipole moments. These are in reality a quantum effect, but it can be helpful to visualise the atom as a tiny current loop. The atomic magnetic dipole moment is defined as\n",
     "\n",
     "$$\\mathbf{m} = I\\mathbf{A}$$\n",
     "\n",
