--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/1D_Heat_Conduction.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/1D_Heat_Conduction.ipynb
@@ -663,11 +663,11 @@
     "\n",
     "So far, we created a piece wise function of thermal conductivity. In real life, it is more often the case that $k$ varies smoothly in space, especially at shallow depths. \n",
     "\n",
-    "[Fisher _et al._ (2001)](https://www.sciencedirect.com/science/article/pii/S0012821X01003107) provides a relationship between depth and thermal conductivity for top 4 m in the Alarcon basin based on field survey:\n",
+    "[Fisher _et al._ (2001)](https://www.sciencedirect.com/science/article/pii/S0012821X01003107) provides a relationship between depth and thermal conductivity for top $4\\,m$ in the Alarcon basin based on field survey:\n",
     "\n",
     "$$k = 0.70 + 0.0035\\times \\text{depth}.$$\n",
     "\n",
-    "According, to Figure 2 from the paper, we could take top temperature at $0^\\circ\\,C$ and bottom temperature between $0.5^\\circ\\,C$ and $2.5^\\circ\\,C$.\n",
+    "According, to Figure 2 from the paper, we could take top temperature at $0^\\circ C$ and bottom temperature between $0.5^\\circ C$ and $2.5^\\circ C$.\n",
     "\n",
     "````{margin}\n",
     "```{admonition} Try writing the code yourself!!\n",
