--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture7_Pipe_Flow_with_Heat.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture7_Pipe_Flow_with_Heat.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/P626.PNG' width = 700>\n",
+    "<p style=\"text-align:center;\"><img src='img/P626.PNG' width = 700></p>\n",
     "\n",
     "Figure 8.1"
    ]
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/P626_4.PNG' width = 700>\n",
+    "<p style=\"text-align:center;\"><img src='img/P626_4.PNG' width = 700></p>\n",
     "\n",
     "Figure 8.2"
    ]
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sum d\\dot{Q}_{adv} = -dyu\\rho c \\frac{\\delta T}{\\delta x}dx$$ (equation7_7)"
+    "$$\\sum d\\dot{Q}_{adv} = -dy\\cdot u\\rho c \\frac{\\delta T}{\\delta x}dx$$(equation7_7)"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/P626_5.PNG' width = 700>"
+    "<p style=\"text-align:center;\"><img src='img/P626_5.PNG' width = 700></p>"
    ]
   },
   {
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\bar{\\theta}=\\frac{1}{d\\bar{u}}\\int^{d/2}_{-d/2}\\theta u dy$$(equation20)"
+    "$$\\bar{\\theta}=\\frac{1}{d\\bar{u}}\\int^{d/2}_{-d/2}\\theta u \\,dy$$(equation20)"
    ]
   },
   {
