--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture8_Part1_Navier_Stoke_Equation.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture8_Part1_Navier_Stoke_Equation.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The equation is developed by summing up the forces of an infinitesimal control volume V ($V=d_{x}d_{y}d_{z}$) in Cartesian coordinate system, and setting the result equal to $m\\vec{a}$. This is demonstrated in the figure below for viscosity forces."
+    "The equation is developed by summing up the forces of an infinitesimal control volume $V$ ($V=d_{x}d_{y}d_{z}$) in Cartesian coordinate system, and setting the result equal to $m\\vec{a}$. This is demonstrated in the figure below for viscosity forces."
    ]
   },
   {
@@ -123,9 +123,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/controlVolume3.PNG' width = 500>\n",
+    "<p style=\"text-align:center;\"><img src='img/controlVolume3.PNG' width = 500></p>\n",
     "\n",
-    "Figure 1 :Infinitesimal control volume V (left) and Cartesian coordinate system (right). Examples of stresses acting on different planes and directions are also shown. "
+    "Figure 1: Infinitesimal control volume $V$ (left) and Cartesian coordinate system (right). Examples of stresses acting on different planes and directions are also shown. "
    ]
   },
   {
@@ -133,8 +133,8 @@
    "metadata": {},
    "source": [
     "We define x-planes are the planes that are perpendicular to x-axis; As shown above, we can see that\n",
-    "longitudinal stress $\\sigma_{xx}$ represents the stress that acts on $x-plane$ in the direction of $x-axis$;\n",
-    "shear stress $\\tau_{xy} $ represents the stress that acts on $x-plane$ in the direction of $y-axis$. $\\langle\\sigma_{xx} \\rangle(x+dx)$ is the longitudinal stress acting on $x-plane$ at $x+dx$."
+    "longitudinal stress $\\sigma_{xx}$ represents the stress that acts on x-plane in the direction of x-axis;\n",
+    "shear stress $\\tau_{xy} $ represents the stress that acts on x-plane in the direction of y-axis. $\\langle\\sigma_{xx} \\rangle(x+dx)$ is the longitudinal stress acting on x-plane at $x+dx$."
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/stresses_x_axis1.PNG' width=700>"
+    "<p style=\"text-align:center;\"><img src='img/stresses_x_axis1.PNG' width=700></p>"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/shear_stress.PNG' width=700>"
+    "<p style=\"text-align:center;\"><img src='img/shear_stress.PNG' width=700></p>"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\delta \\alpha \\approx tan(\\delta \\alpha) = \\frac{\\delta x}{dy} =\\frac{(u_0 - (u_0+\\delta u))\\cdot dt}{dy}=\\frac{\\delta u dt}{dy}$$ (equation8_10)"
+    "$$\\delta \\alpha \\approx \\tan(\\delta \\alpha) = \\frac{\\delta x}{dy} =\\frac{(u_0 - (u_0+\\delta u))\\cdot dt}{dy}=\\frac{\\delta u \\,dt}{dy}$$ (equation8_10)"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{xy} = \\tau_{yx} = \\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$ (equation8_14)"
+    "$$\\tau_{xy} = \\tau_{yx} = \\mu\\left(\\frac{du}{dy}+\\frac{dv}{dx}\\right)$$ (equation8_14)"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='img/normal_stress.PNG' width=400>\n",
+    "<p style=\"text-align:center;\"><img src='img/normal_stress.PNG' width=400></p>\n",
     "\n",
     "Figure 4"
    ]
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we apply the same logic, we can have the normal and shear stresses in 3d problem due to viscosity alone"
+    "If we apply the same logic, we can have the normal and shear stresses in 3D problem due to viscosity alone"
    ]
   },
   {
@@ -418,21 +418,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{xy}=\\tau_{yx}=\\mu(\\frac{du}{dy}+\\frac{dv}{dx})$$(equation8_20)"
+    "$$\\tau_{xy}=\\tau_{yx}=\\mu\\left(\\frac{du}{dy}+\\frac{dv}{dx}\\right)$$(equation8_20)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{yz}=\\tau_{zy}=\\mu(\\frac{dw}{dy}+\\frac{dv}{dz})$$(equation8_21)"
+    "$$\\tau_{yz}=\\tau_{zy}=\\mu\\left(\\frac{dw}{dy}+\\frac{dv}{dz}\\right)$$(equation8_21)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\tau_{xz}=\\tau_{zx}=\\mu(\\frac{dw}{dx}+\\frac{du}{dz})$$(equation8_22)"
+    "$$\\tau_{xz}=\\tau_{zx}=\\mu\\left(\\frac{dw}{dx}+\\frac{du}{dz}\\right)$$(equation8_22)"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$2\\mu\\frac{\\delta^2u}{\\delta x^2}+\\mu(\\frac{\\delta^2 u}{\\delta y^2}+\\frac{\\delta^2v}{\\delta x \\, \\delta y}+\\frac{\\delta^2 w}{\\delta x \\, \\delta z}+\\frac{\\delta^2 u}{\\delta z^2})$$ (equation8_23)"
+    "$$2\\mu\\frac{\\delta^2u}{\\delta x^2}+\\mu\\left(\\frac{\\delta^2 u}{\\delta y^2}+\\frac{\\delta^2v}{\\delta x \\, \\delta y}+\\frac{\\delta^2 w}{\\delta x \\, \\delta z}+\\frac{\\delta^2 u}{\\delta z^2}\\right)$$ (equation8_23)"
    ]
   },
   {
@@ -488,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mu(\\frac{\\delta^2u}{\\delta x^2}+\\frac{\\delta^2u}{\\delta y^2}+\\frac{\\delta^2u}{\\delta z^2})$$ (equation8_26)"
+    "$$\\mu\\left(\\frac{\\delta^2u}{\\delta x^2}+\\frac{\\delta^2u}{\\delta y^2}+\\frac{\\delta^2u}{\\delta z^2}\\right)$$ (equation8_26)"
    ]
   },
   {
@@ -502,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mu(\\frac{\\delta^2v}{\\delta x^2}+\\frac{\\delta^2v}{\\delta y^2}+\\frac{\\delta^2v}{\\delta z^2})$$ (equation8_27)"
+    "$$\\mu\\left(\\frac{\\delta^2v}{\\delta x^2}+\\frac{\\delta^2v}{\\delta y^2}+\\frac{\\delta^2v}{\\delta z^2}\\right)$$ (equation8_27)"
    ]
   },
   {
@@ -516,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mu(\\frac{\\delta^2w}{\\delta x^2}+\\frac{\\delta^2w}{\\delta y^2}+\\frac{\\delta^2w}{\\delta z^2})$$ (equation8_28)"
+    "$$\\mu\\left(\\frac{\\delta^2w}{\\delta x^2}+\\frac{\\delta^2w}{\\delta y^2}+\\frac{\\delta^2w}{\\delta z^2}\\right)$$ (equation8_28)"
    ]
   },
   {
