--- a/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Mixed layer.ipynb
+++ b/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Mixed layer.ipynb
@@ -33,12 +33,12 @@
    "source": [
     "The mixed layer is mixed by the winds on the surface creating a homogeneous layer. It is being mixed by wind stress, eddies, kinematic viscosity and convection. The stronger the winds, the deeper the mixed layer. The mixed layer is deeper in the Winter than in Summer. In the Winter, the surface water cooles so it becomes denser causing convection as it is more dense than the layer below. More turbulence also deepens the mixed layer.\n",
     "\n",
-    "<img src=\"https://www.coexploration.org/bermuda/assets/images/thermocline.jpg\" alt=\"image info\" width=\"400\" \n",
-    "     height=\"400\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.coexploration.org/bermuda/assets/images/thermocline.jpg\" alt=\"image info\" width=\"400\" \n",
+    "     height=\"400\"/></p>\n",
     "\n",
     "\n",
     "\n",
-    "The mixed layer is about 10-200m thick depending on stratification (density gradients), season, wind stress, convection and velocity gradient (turbulence and eddies)."
+    "The mixed layer is between $10$ and $200\\,m$ approximately thick depending on stratification (density gradients), season, wind stress, convection and velocity gradient (turbulence and eddies)."
    ]
   },
   {
@@ -713,7 +713,7 @@
    "metadata": {},
    "source": [
     "From the above plots, it can be seen that temperature and salinity look homogeneous in the mixed layer.\n",
-    "Below the mixed layer is the thermocline which is a region where the temperature gradient is very steep. The termocline is between 300 and 1000m and is steepest for example in the Artic where fresh cold water overlies warmer watter."
+    "Below the mixed layer is the thermocline which is a region where the temperature gradient is very steep. The termocline is between $300$ and $1000\\,m$ and is steepest for example in the Artic where fresh cold water overlies warmer watter."
    ]
   },
   {
