--- a/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Stream lines.ipynb
+++ b/notebooks/d_geosciences/Geophysical Fluid Dynamics of the Oceans/Stream lines.ipynb
@@ -44,8 +44,8 @@
     "\n",
     "where $u(x,y)$ and $v(x,y)$ are velocity component functions.\n",
     "\n",
-    "<img src=\"https://i0.wp.com/theconstructor.org/wp-content/uploads/2020/04/Velocity-Components-Along-Stream-Line.jpg?resize=577%2C206&ssl=1\" alt=\"image info\" width=\"600\" \n",
-    "     height=\"400\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://i0.wp.com/theconstructor.org/wp-content/uploads/2020/04/Velocity-Components-Along-Stream-Line.jpg?resize=577%2C206&ssl=1\" alt=\"image info\" width=\"600\" \n",
+    "     height=\"300\"/></p>\n",
     "\n",
     "\n",
     "The stream function satisfies the continuity equation and is therefore incompressible. This means that \n",
