--- a/notebooks/d_geosciences/Continental Tectonics/Isostasy.ipynb
+++ b/notebooks/d_geosciences/Continental Tectonics/Isostasy.ipynb
@@ -20,7 +20,7 @@
     "## The Principle of Isostasy\n",
     "Isostasy (from the Greek for“equal standing”) is based on Archimedes’ principle, which states that the weight of a floating solid is equal to the weight of the fluid it displaces. \n",
     "\n",
-    "According to legend, the Greek philosopher Archimedes discovered this principle over 2200 years ago while sitting in his bath; boggled by its implications, he rushed naked into the street, yelling “Eureka, I have found it!” Major discoveries rarely provoke such enthusiastic responses from modern scientists."
+    "According to legend, the Greek philosopher Archimedes discovered this principle over $2200$ years ago while sitting in his bath; boggled by its implications, he rushed naked into the street, yelling “Eureka, I have found it!” Major discoveries rarely provoke such enthusiastic responses from modern scientists."
    ]
   },
   {
@@ -31,15 +31,15 @@
     "\n",
     "Balance pressure, ${\\rho}gh$, at base of columns.<br>\n",
     "\n",
-    "<img src=\"images/isostasy.png\" style=\"width:400px;height:200px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/isostasy.png\" style=\"width:400px;height:200px\" align=\"center\"/></p>\n",
     "\n",
-    "If continental crust (${\\rho}_{c}$ = 2.8 g/cm3) floated alone on top of mantle material (${\\rho}_{m}$ = 3.3 g/cm3), we must account for the oceanic crust (${\\rho}_{o}$ = 2.9 g/cm3) and the ocean water (${\\rho}_{w}$ = 1.0 g/cm3) that also floaton the mantle. Since these two layers fill up the basins around the continents, we must subtract from the continental elevation the height $h$ that each of those layers alone would float above the mantle, given by its buoyancy factor times its thickness. The isostatic equation for continents therefore has three terms, one positive and two negative:\n",
+    "If continental crust (${\\rho}_{c} = 2.8\\,g\\,cm^{-3}$) floated alone on top of mantle material (${\\rho}_{m} = 3.3\\,g\\,cm^{-3}$), we must account for the oceanic crust (${\\rho}_{o} = 2.9\\,g\\,cm^{-3}$) and the ocean water (${\\rho}_{w} = 1.0\\,g\\,cm^{-3}$) that also floaton the mantle. Since these two layers fill up the basins around the continents, we must subtract from the continental elevation the height $h$ that each of those layers alone would float above the mantle, given by its buoyancy factor times its thickness. The isostatic equation for continents therefore has three terms, one positive and two negative:\n",
     "\n",
-    "Continental elevation $=(1-\\frac{{\\rho}_{c}}{{\\rho}_{m}})h_{c}-(1-\\frac{{\\rho}_{o}}{{\\rho}_{m}})h_{o}-(1-\\frac{{\\rho}_{w}}{{\\rho}_{m}})h_{w}$\n",
+    "$$\\text{Continental elevation} =\\left(1-\\frac{{\\rho}_{c}}{{\\rho}_{m}}\\right)h_{c}-\\left(1-\\frac{{\\rho}_{o}}{{\\rho}_{m}}\\right)h_{o}-\\left(1-\\frac{{\\rho}_{w}}{{\\rho}_{m}}\\right)h_{w}$$\n",
     "\n",
-    "Using thicknesses of 33 km and 7 km for continental and oceanic crust, respectively, and a water depth of 4.5 km, we obtain:\n",
+    "Using thicknesses of $33\\,km$ and $7\\,km$ for continental and oceanic crust, respectively, and a water depth of $4.5\\,km$, we obtain:\n",
     "\n",
-    "Continental elevation $=(0.15*33)-(0.12*7.0)-(0.70*4.5)=0.96\\:km$\n",
+    "$$\\text{Continental elevation} =(0.15 \\cdot 33)-(0.12\\cdot7.0)-(0.70\\cdot4.5)=0.96\\,km$$\n",
     "\n",
     "This result is consistent with the overall distribution of Earth’s topography. Because of isostasy, elevation is a sensitive indicator of crustal thickness, so regions of lower elevation must have thinner crust (or higher average density), whereas regions of higher elevation, such as the Tibetan Plateau, must have thicker crust (or lower average density).\n",
     "\n",
@@ -53,11 +53,11 @@
     "### Practice 1\n",
     "By assuming that the mid-oceanic ridge and the abyssal plain are in isostatic equilibrium use Figures 1 and 2 to estimate the thickness of the lithosphere beneath the abyssal plain (at A′). Satisfy yourself that\n",
     "\n",
-    "$t_{m} = \\frac{t_{w1}({\\rho}_{w} − {\\rho}_{a}) + t_{w2}({\\rho}_{a} − {\\rho}_{w})}{{\\rho}_{m} − {\\rho}_{w}}$\n",
+    "$$t_{m} = \\frac{t_{w1}({\\rho}_{w} − {\\rho}_{a}) + t_{w2}({\\rho}_{a} − {\\rho}_{w})}{{\\rho}_{m} − {\\rho}_{w}}$$\n",
     "\n",
-    "Seismological and geochemical data indicate that the crust is 7.1 km thick at the ridge. It is reasonable to assume that the asthenosphere has a density of 3.2 g/cm3, the lithospheric mantle has a density of 3.3 g/cm3 and oceanic crust has a density of 2.8 g/cm3. Density of seawater is ∼ 1.03 g/cm3.\n",
+    "Seismological and geochemical data indicate that the crust is $7.1\\,km$ thick at the ridge. It is reasonable to assume that the asthenosphere has a density of $3.2\\,g\\,cm^{-3}$, the lithospheric mantle has a density of $3.3\\,g\\,cm^{-3}$ and oceanic crust has a density of $2.8\\,g\\,cm^{-3}$. Density of seawater is ∼ $1.03\\,g\\,cm^{-3}$.\n",
     "\n",
-    "<img src=\"images/prac1.png\" style=\"width:600px;height:400px\" align=\"center\"/>"
+    "<p style=\"text-align:center;\"><img src=\"images/prac1.png\" style=\"width:600px;height:400px\" align=\"center\"/></p>"
    ]
   },
   {
@@ -67,31 +67,31 @@
     "### Solution 1\n",
     "From Figure 2:\n",
     "\n",
-    "$t_{w1}\\rho_{w}+ t_{oc}\\rho_{oc} + x\\rho_{a} = t_{w2}\\rho_{w} + t_{oc}\\rho_{oc} + t_{m}\\rho_{m}$\n",
+    "$$t_{w1}\\rho_{w}+ t_{oc}\\rho_{oc} + x\\rho_{a} = t_{w2}\\rho_{w} + t_{oc}\\rho_{oc} + t_{m}\\rho_{m}$$\n",
     "\n",
     "By equating depth to compensation on each side:\n",
     "\n",
-    "$t_{w1} + t_{oc} + x = t_{w2} + t_{oc} + t_{m}$\n",
+    "$$t_{w1} + t_{oc} + x = t_{w2} + t_{oc} + t_{m}$$\n",
     "\n",
-    "$x = t_{w2} + t_{m} - t_{w1}$\n",
+    "$$x = t_{w2} + t_{m} - t_{w1}$$\n",
     "\n",
     "Therefore:\n",
     "\n",
-    "$t_{w1}\\rho_{w}+ t_{oc}\\rho_{oc} + (t_{w2} + t_{m} - t_{w1})\\rho_{a} = t_{w2}\\rho_{w} + t_{oc}\\rho_{oc} + t_{m}\\rho_{m}$\n",
+    "$$t_{w1}\\rho_{w}+ t_{oc}\\rho_{oc} + (t_{w2} + t_{m} - t_{w1})\\rho_{a} = t_{w2}\\rho_{w} + t_{oc}\\rho_{oc} + t_{m}\\rho_{m}$$\n",
     "\n",
-    "$t_{w1}\\rho_{w} + (t_{w2} + t_{m} - t_{w1})\\rho_{a} = t_{w2}\\rho_{w} + t_{m}\\rho_{m}$\n",
+    "$$t_{w1}\\rho_{w} + (t_{w2} + t_{m} - t_{w1})\\rho_{a} = t_{w2}\\rho_{w} + t_{m}\\rho_{m}$$\n",
     "\n",
-    "$t_{w1}\\rho_{w} + t_{w2}\\rho_{a} + t_{m}\\rho_{a} - t_{w1}\\rho_{a} = t_{w2}\\rho_{w} + t_{m}\\rho_{m}$\n",
+    "$$t_{w1}\\rho_{w} + t_{w2}\\rho_{a} + t_{m}\\rho_{a} - t_{w1}\\rho_{a} = t_{w2}\\rho_{w} + t_{m}\\rho_{m}$$\n",
     "\n",
-    "$t_{m}\\rho_{a}  - t_{m}\\rho_{m} = t_{w2}\\rho_{w} + t_{w1}\\rho_{a} - t_{w2}\\rho_{a} - t_{w1}\\rho_{w}$\n",
+    "$$t_{m}\\rho_{a}  - t_{m}\\rho_{m} = t_{w2}\\rho_{w} + t_{w1}\\rho_{a} - t_{w2}\\rho_{a} - t_{w1}\\rho_{w}$$\n",
     "\n",
-    "$t_{m}\\rho_{m} - t_{m}\\rho_{a} = t_{w2}\\rho_{a} + t_{w1}\\rho_{w} - t_{w2}\\rho_{w} - t_{w1}\\rho_{a} $\n",
+    "$$t_{m}\\rho_{m} - t_{m}\\rho_{a} = t_{w2}\\rho_{a} + t_{w1}\\rho_{w} - t_{w2}\\rho_{w} - t_{w1}\\rho_{a} $$\n",
     "\n",
-    "$t_{m}(\\rho_{m} - \\rho_{a}) = t_{w1}\\rho_{w} - t_{w1}\\rho_{a} + t_{w2}\\rho_{a} - t_{w2}\\rho_{w}  $\n",
+    "$$t_{m}(\\rho_{m} - \\rho_{a}) = t_{w1}\\rho_{w} - t_{w1}\\rho_{a} + t_{w2}\\rho_{a} - t_{w2}\\rho_{w}  $$\n",
     "\n",
-    "$t_{m}(\\rho_{m} - \\rho_{a}) = t_{w1}(\\rho_{w} - \\rho_{a}) + t_{w2}(\\rho_{a} - \\rho_{w})  $\n",
+    "$$t_{m}(\\rho_{m} - \\rho_{a}) = t_{w1}(\\rho_{w} - \\rho_{a}) + t_{w2}(\\rho_{a} - \\rho_{w})  $$\n",
     "\n",
-    "$t_{m} = \\frac{t_{w1}(\\rho_{w} - \\rho_{a}) + t_{w2}(\\rho_{a} - \\rho_{w})}{(\\rho_{m} - \\rho_{a})}  $\n",
+    "$$t_{m} = \\frac{t_{w1}(\\rho_{w} - \\rho_{a}) + t_{w2}(\\rho_{a} - \\rho_{w})}{(\\rho_{m} - \\rho_{a})}  $$\n",
     "\n"
    ]
   },
