--- a/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture5_1D_Pipe_Flow.ipynb
+++ b/notebooks/d_geosciences/Geodynamics (Fluid Dynamics)/Lecture5_1D_Pipe_Flow.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/F61.PNG\" width=\"500\">\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F61.PNG\" width=\"500\"></p>\n",
     "\n",
     "Figure 6.1: (a) The force balance on a layer of ﬂuid in a channel with an applied pressure gradient. (b) A typical velocity proﬁle."
    ]
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/F62.PNG\" width=\"500\">\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F62.PNG\" width=\"500\"></p>\n",
     "\n",
     "Figure 6.3: Unidirectional ﬂow of a constant thickness layer of viscous ﬂuid down an inclined plane."
    ]
@@ -400,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$u(y)=\\frac{\\rho g sin\\alpha}{2\\mu}(h^2-y^2)$$(eq10)"
+    "$$u(y)=\\frac{\\rho g \\sin \\alpha}{2\\mu}(h^2-y^2)$$ (eq10)"
    ]
   },
   {
@@ -414,28 +414,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagine we have a tiny rectangle in the liquid as shown in figure 6.3, there would be three forces acting on this body: the dragging force $F_{\\tau(y)}$ to the downhill direction caused by shear stress $\\tau(y)$, the gravitational force $F_g sin\\alpha$ pulling it to the downhill direction and the resisting drag force acting uphill $-F_{\\tau(y+\\delta y)}$ that is due to the shear stress $\\tau(y+\\delta y)$:"
+    "Imagine we have a tiny rectangle in the liquid as shown in figure 6.3, there would be three forces acting on this body: the dragging force $F_{\\tau(y)}$ to the downhill direction caused by shear stress $\\tau(y)$, the gravitational force $F_g \\sin\\alpha$ pulling it to the downhill direction and the resisting drag force acting uphill $-F_{\\tau(y+\\delta y)}$ that is due to the shear stress $\\tau(y+\\delta y)$:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$F_{\\tau(y)}=l*\\tau(y)$$(eq11)"
+    "$$F_{\\tau(y)}=l \\cdot \\tau(y)$$(eq11)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$-F_{\\tau(y+\\delta y)}=-l*\\tau(y+\\delta y)=-l*(\\tau(y)+\\frac{d\\tau}{dy}*\\delta y)$$(eq12)"
+    "$$-F_{\\tau(y+\\delta y)}=-l \\cdot \\tau(y+\\delta y)=-l \\cdot (\\tau(y)+\\frac{d\\tau}{dy} \\cdot \\delta y)$$(eq12)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$F_g sin \\alpha = mg*sin\\alpha =v\\rho*g*sin\\alpha= \\delta y * l * \\rho * g * sin\\alpha$$(eq13)"
+    "$$F_g \\sin \\alpha = mg\\sin\\alpha =v\\rho g \\sin\\alpha= (\\delta y) l \\rho g \\sin\\alpha$$(eq13)"
    ]
   },
   {
@@ -449,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sum F_x = F_{\\tau(y)} - F{\\tau(y+\\delta y)} + F_g*sin\\alpha = 0$$(eq14)"
+    "$$\\sum F_x = F_{\\tau(y)} - F{\\tau(y+\\delta y)} + F_g\\sin\\alpha = 0$$(eq14)"
    ]
   },
   {
@@ -463,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{d\\tau}{dy}=-\\rho g sin\\alpha$$(eq15)"
+    "$$\\frac{d\\tau}{dy}=-\\rho g \\sin\\alpha$$(eq15)"
    ]
   },
   {
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\mu \\frac{d^2 u}{d y^2} = -\\rho g sin\\alpha$$(eq16)"
+    "$$\\mu \\frac{d^2 u}{d y^2} = -\\rho g \\sin\\alpha$$(eq16)"
    ]
   },
   {
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\frac{du}{dy}=-\\frac{\\rho g sin\\alpha}{\\mu}y+C_1$$ (eq17)"
+    "$$\\frac{du}{dy}=-\\frac{\\rho g \\sin\\alpha}{\\mu}y+C_1$$ (eq17)"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$u(y) = -\\frac{\\rho g sin\\alpha}{2\\mu}y^2+C_1 y+C_2$$(eq18) \n",
+    "$$u(y) = -\\frac{\\rho g \\sin\\alpha}{2\\mu}y^2+C_1 y+C_2$$(eq18) \n",
     "where $C_1=0$ from the free surface condition. "
    ]
   },
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$0 =  -\\frac{\\rho g sin\\alpha}{2\\mu}h^2+C_2$$(eq19)"
+    "$$0 =  -\\frac{\\rho g \\sin\\alpha}{2\\mu}h^2+C_2$$(eq19)"
    ]
   },
   {
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$u (y) = \\frac{\\rho g sin\\alpha}{2\\mu}(h^2-y^2)$$(eq20)"
+    "$$u (y) = \\frac{\\rho g \\sin\\alpha}{2\\mu}(h^2-y^2)$$(eq20)"
    ]
   },
   {
@@ -556,7 +556,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\bar{u} = \\frac{\\rho g h^2 sin\\alpha}{3\\mu}\n",
+    "\\bar{u} = \\frac{\\rho g h^2 \\sin\\alpha}{3\\mu}\n",
     "$$(eq21)"
    ]
   },
@@ -585,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$h = (\\frac{3\\mu Q}{\\rho g sin\\alpha})^{1/3}$$(eq23)"
+    "$$h = \\left(\\frac{3\\mu Q}{\\rho g \\sin\\alpha}\\right)^{\\frac{1}{3}}$$(eq23)"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/F66.PNG\" width=\"600\">\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F66.PNG\" width=\"600\"></p>\n",
     "\n",
     "Figure 6.6: Poiseuille ﬂow through a circular pipe."
    ]
@@ -622,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$(p_1-p_0)\\pi r^2 = -\\tau * 2\\pi r l$$(eq24)"
+    "$$(p_1-p_0)\\pi r^2 = -\\tau \\cdot 2\\pi r l$$(eq24)"
    ]
   },
   {
@@ -702,7 +702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$Q=\\int^R_0 2\\pi r u dr = - \\frac{\\pi R^4}{8\\mu}\\frac{dp}{dx} = \\pi R^2 \\bar{\\mu}$$(eq29)"
+    "$$Q=\\int^R_0 2\\pi r u \\,dr = - \\frac{\\pi R^4}{8\\mu}\\frac{dp}{dx} = \\pi R^2 \\bar{\\mu}$$(eq29)"
    ]
   },
   {
@@ -782,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$f=0.3164Re^{-1/4}$$(eq35)"
+    "$$f=0.3164Re^{-\\frac{1}{4}}$$(eq35)"
    ]
   },
   {
@@ -854,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/F69.PNG\" width=\"400\">\n",
+    "<p style=\"text-align:center;\"><img src=\"img/F69.PNG\" width=\"400\"></p>\n",
     "\n",
     "Figure 6.9: A semicircular aquifer with a circular cross section (a toroid). A hydrostatic head b is available to drive the ﬂow.\n"
    ]
@@ -958,7 +958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/Rising_Magma1.PNG\" width=\"500\">\n",
+    "<p style=\"text-align:center;\"><img src=\"img/Rising_Magma1.PNG\" width=\"500\"></p>\n",
     "\n",
     "Figure 6.10"
    ]
@@ -988,21 +988,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$F_{\\tau(x)}=\\tau(x) \\times l =\\mu \\frac{d u}{dx} \\times l$$(eq43)"
+    "$$F_{\\tau(x)}=\\tau(x) \\cdot l =\\mu \\frac{d u}{dx} \\cdot l$$(eq43)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$F_{\\tau(x+\\delta x)}=\\tau(x+\\delta x) \\times l= (\\tau(x)+\\frac{d \\tau}{d x}\\delta x \\times l =\\mu (\\frac{d u}{dx}+\\frac{d^2u}{dx^2}) \\times l$$(eq44)"
+    "$$F_{\\tau(x+\\delta x)}=\\tau(x+\\delta x) \\cdot l= \\tau(x)+\\frac{d \\tau}{d x}\\delta x \\cdot l =\\mu (\\frac{d u}{dx}+\\frac{d^2u}{dx^2}) \\cdot l$$(eq44)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$F_p = (\\rho_s-\\rho_l)g \\times l \\times \\delta x $$ (eq45)"
+    "$$F_p = (\\rho_s-\\rho_l)g \\cdot l \\cdot \\delta x $$ (eq45)"
    ]
   },
   {
@@ -1058,7 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\bar{u}=\\frac{1}{d}\\int^{d/2}_{-d/2} u(x) dx = \\frac{(\\rho_s-\\rho_l)g}{12\\mu}d^2$$(eq49)"
+    "$$\\bar{u}=\\frac{1}{d}\\int^{d/2}_{-d/2} u(x) \\,dx = \\frac{(\\rho_s-\\rho_l)g}{12\\mu}d^2$$(eq49)"
    ]
   },
   {
